@@ -39,8 +39,6 @@
 #if HAVE_SOCKETS
 #ifndef WIN32
 
-#define closesocket close
-
 #if HAVE_SYS_SOCKET_H
 #include <sys/types.h>
 #include <sys/socket.h>
