@@ -1,3 +1,7 @@
+Mon May 10 21:33:28 CEST 2004  Joern Thyssen  <jth@gnubg.org>
+
+	* external.h: move "#define closesocket close" to external.h
+
 Sat May  8 11:25:08 CEST 2004  Joern Thyssen  <jth@gnubg.org>
 
 	* gnubg.c, show.c: enlarge buffers
